# bridge_ai

./: .gitignore  README.md  pyproject.toml
src/: proxy_client.py  proxy_server.py
testing_env/servers/scripts/: run_all_servers.sh
testing_env/servers/src/basic_server/: greeting_server.py  notes_server.py  twitter_server.py
